<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/tiiitle_tex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="36dp"
                android:fontFamily="@font/bentonsans_bold"
                android:gravity="top"
                android:lineSpacingExtra="9sp"
                android:text="@string/titleHome"
                android:textAppearance="@style/tiiitle_tex"
                android:translationY="-4.65sp" />



            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                tools:ignore="MissingConstraints">

                <View
                    android:id="@+id/rectangle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:alpha="0.1"
                    android:background="@drawable/rectangle" />

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:iconifiedByDefault="false"
                    android:inputType="textFilter" />



            </RelativeLayout>
            <TextView
                android:id="@+id/popular_mov"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bentonsans_bold"
                android:lineSpacingExtra="5sp"
                android:text="@string/secondTitleHome"
                android:textAppearance="@style/popular_mov" />

        </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="137dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessLeaf" >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerSuperHero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/bentonsans_bold"
                            android:text="@string/spider_man" />

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/likeImageView"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/twitter_like" />
                    </LinearLayout>

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/imageViewMovie"
                        android:layout_width="160dp"
                        android:layout_height="200dp"
                        android:contentDescription="@string/peli"
                        app:srcCompat="@drawable/spider" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/bentonsans_bold"
                            android:text="@string/spider_man" />

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/likeImageView2"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/twitter_like" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="160dp"
                        android:layout_height="200dp"
                        android:contentDescription="@string/peli"
                        app:srcCompat="@drawable/spider" />

                </LinearLayout>

                <Button
                    android:id="@+id/buttonPasarPagina"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/botonpractica" />


            </LinearLayout>


        </ScrollView>

    </LinearLayout>



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="298dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp">

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1.23dp"
            android:alpha="0.3"
            android:background="@drawable/fondohome"
            android:rotation="20"
            android:translationX="130dp"
            android:translationY="-195dp" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>